Issue #38: changed POMs and some code to compile on Java 11